--- a/rosjava_agents/build.gradle
+++ b/rosjava_agents/build.gradle
@@ -2,9 +2,11 @@ defaultTasks 'run'
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
+apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
 version '1.0'
-group   'org.jason'
+group   'org.jason-lang'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -12,9 +14,9 @@ targetCompatibility = 1.8
 repositories {
     mavenCentral()
     jcenter()
+    google()
 
     maven { url "http://jacamo.sourceforge.net/maven2" }
-    maven { url "http://jade.tilab.com/maven/" }
     maven { url "https://raw.github.com/rosjava/rosjava_mvn_repo/master" }
 
     flatDir {
@@ -27,6 +29,11 @@ dependencies {
     compile 'org.ros.rosjava_core:rosjava:[0.3,0.4)'
     compile 'org.ros.rosjava_messages:geometry_msgs:[1.12,1.13)'
     compile (name:'jason_msgs', ext:'jar')
+
+    compile 'com.google.guava:guava:12.0'
+    compile 'org.apache.commons:com.springsource.org.apache.commons.logging:1.1.1'
+    compile 'org.ros.rosjava_bootstrap:message_generation:[0.3,0.4)'
+
 }
 
 sourceSets {
@@ -50,4 +57,42 @@ task run (type: JavaExec, dependsOn: 'classes') {
 clean {
     delete 'bin'
     delete 'build'
+}
+
+task javadocJar (type: Jar, dependsOn: javadoc) {
+    baseName 'jasonros'
+    classifier = 'javadoc'
+    //from '${docsDir}/../../doc/api'
+}
+
+task sourceJar (type : Jar) {
+    baseName 'jasonros'
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives sourceJar, javadocJar
+}
+
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            from components.java
+			      artifact sourceJar
+			      artifact javadocJar
+            artifactId 'jasonros'
+        }
+    }
+}
+
+task publishMavenSF(dependsOn: [ 'build', 'publishToMavenLocal']) {
+  doLast {
+    def wdir = System.getProperty("user.home")+'/.m2/repository/org/jason-lang/jasonros'
+    copy {
+        from wdir
+        into 'mvnrepo'
+    }
+  }
 }
