--- a/rosjava_agents/build.gradle
+++ b/rosjava_agents/build.gradle
@@ -87,12 +87,29 @@ publishing {
     }
 }
 
-task publishMavenSF(dependsOn: [ 'build', 'publishToMavenLocal']) {
+task publishMavenGitHub(dependsOn: [ 'build', 'publishToMavenLocal']) {
   doLast {
     def wdir = System.getProperty("user.home")+'/.m2/repository/org/jason-lang/jasonros'
+    def rdir = System.getProperty("user.home")+'/pro/jason-mvn-repo'
+    exec {
+        commandLine 'git', 'pull'
+        workingDir rdir
+    }
     copy {
         from wdir
-        into 'mvnrepo'
+        into rdir + '/org/jason-lang/jasonros'
+    }
+    exec {
+        commandLine 'git', 'add', '*'
+        workingDir rdir
+    }
+    exec {
+        commandLine 'git', 'commit', '-a', '-m', 'new version of jasonros '+project.version
+        workingDir rdir
+    }
+    exec {
+        commandLine 'git', 'push'
+        workingDir rdir
     }
   }
 }
