--- a/rosjava_agents/build.gradle
+++ b/rosjava_agents/build.gradle
@@ -27,12 +27,13 @@ repositories {
 dependencies {
     compile group: 'org.jason-lang',     name: 'jason' ,   version: '2.4-SNAPSHOT'
     compile 'org.ros.rosjava_core:rosjava:[0.3,0.4)'
+    compile 'org.ros.rosjava_messages:std_msgs:[0.5,0.6)'
     compile 'org.ros.rosjava_messages:geometry_msgs:[1.12,1.13)'
+    compile 'org.ros.rosjava_bootstrap:message_generation:[0.3,0.4)'
     compile files('lib/jason_msgs.jar') //(name:'jason_msgs', ext:'jar')
 
     compile 'com.google.guava:guava:12.0'
     compile 'org.apache.commons:com.springsource.org.apache.commons.logging:1.1.1'
-    compile 'org.ros.rosjava_bootstrap:message_generation:[0.3,0.4)'
 
 }
 
