--- a/jason_hw_bridge/package.xml
+++ b/jason_hw_bridge/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>hw_bridge</name>
+  <name>jason_hw_bridge</name>
   <version>1.4.0</version>
-  <description>The hw_bridge package</description>
+  <description>The jason_hw_bridge package</description>
 
   <maintainer email="gustavorezendesilva@hotmail.com">Gustavo R. Silva</maintainer>
 
