♻️ 🚚 Refactor packages to jason_ros and jason_ros_msgs

--- a/jason_ros/CMakeLists.txt
+++ b/jason_ros/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(jason_hw_bridge)
+project(jason_ros)
 
 
 find_package(catkin REQUIRED COMPONENTS
-  jason_msgs
+  jason_ros_msgs
   rospy
 )
 
