--- a/jason_ros_msgs/package.xml
+++ b/jason_ros_msgs/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>jason_hw_bridge</name>
-  <version>1.4.0</version>
-  <description>The jason_hw_bridge package</description>
+  <name>jason_ros_msgs</name>
+  <version>1.6.0</version>
+  <description>The jason_ros_msgs package</description>
 
   <maintainer email="gustavorezendesilva@hotmail.com">Gustavo R. Silva</maintainer>
 
@@ -13,16 +13,13 @@
   <license>GPLv3</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-
-  <build_depend>rospy</build_depend>
-  <build_export_depend>rospy</build_export_depend>
-  <exec_depend>rospy</exec_depend>
-
-  <build_depend>jason_msgs</build_depend>
-  <build_export_depend>jason_msgs</build_export_depend>
-  <exec_depend>jason_msgs</exec_depend>
-
-  <exec_depend>python-pathlib</exec_depend>
+  <build_depend>message_generation</build_depend>
+  <build_depend>message_runtime</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_export_depend>std_msgs</build_export_depend>
+  <exec_depend>message_runtime</exec_depend>
+  <exec_depend>message_generation</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
 
   <export>
   </export>
