--- a/jason_ros_comm/package.xml
+++ b/jason_ros_comm/package.xml
@@ -14,11 +14,11 @@
 
 
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>jason_msgs</build_depend>
+  <build_depend>jason_ros_msgs</build_depend>
   <build_depend>rospy</build_depend>
-  <build_export_depend>jason_msgs</build_export_depend>
+  <build_export_depend>jason_ros_msgs</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
-  <exec_depend>jason_msgs</exec_depend>
+  <exec_depend>jason_ros_msgs</exec_depend>
   <exec_depend>rospy</exec_depend>
 
 
