--- a/jason_ros/CMakeLists.txt
+++ b/jason_ros/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.0.2)
 project(jason_ros)
 
 
@@ -7,10 +7,14 @@ find_package(catkin REQUIRED COMPONENTS
   rospy
 )
 
-
 catkin_package(
 )
 
 include_directories(
   ${catkin_INCLUDE_DIRS}
 )
+
+catkin_python_setup()
+
+catkin_install_python(PROGRAMS src/jason_ros/hw_bridge.py
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
