--- a/jason_ros/src/rosjava_agents/build.gradle
+++ b/jason_ros/src/rosjava_agents/build.gradle
@@ -1,22 +1,18 @@
 defaultTasks 'run'
 
-apply plugin: 'java'
+apply plugin: 'java-library'
 apply plugin: 'eclipse'
-apply plugin: 'maven'
 apply plugin: 'maven-publish'
 
 version '1.8'
 group   'org.jason-lang'
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
     jcenter()
     google()
 
-    maven { url "http://jacamo.sourceforge.net/maven2" }
+    maven { url "https://raw.githubusercontent.com/jacamo-lang/mvn-repo/master" }
     maven { url "https://raw.github.com/rosjava/rosjava_mvn_repo/master" }
 
     flatDir {
@@ -25,14 +21,14 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.jason-lang',     name: 'jason' ,   version: '2.5-SNAPSHOT'
-    compile 'org.ros.rosjava_core:rosjava:[0.3,0.4)'
-    compile 'org.ros.rosjava_messages:std_msgs:[0.5,0.6)'
-    compile 'org.ros.rosjava_bootstrap:message_generation:[0.3,0.4)'
-    compile files('lib/jason_ros_msgs.jar') //(name:'jason_ros_msgs', ext:'jar')
+    implementation group: 'org.jason',     name: 'jason' ,   version: '3.0-SNAPSHOT'
+    implementation 'org.ros.rosjava_core:rosjava:[0.3,0.4)'
+    implementation 'org.ros.rosjava_messages:std_msgs:[0.5,0.6)'
+    implementation 'org.ros.rosjava_bootstrap:message_generation:[0.3,0.4)'
+    implementation files('lib/jason_ros_msgs.jar') //(name:'jason_ros_msgs', ext:'jar')
 
-    compile 'com.google.guava:guava:12.0'
-    compile 'org.apache.commons:com.springsource.org.apache.commons.logging:1.1.1'
+    implementation 'com.google.guava:guava:12.0'
+    implementation 'org.apache.commons:com.springsource.org.apache.commons.logging:1.1.1'
 
 }
 
@@ -74,7 +70,6 @@ task sourceJar (type : Jar) {
 artifacts {
     archives sourceJar, javadocJar
 }
-
 
 publishing {
     publications {
