--- a/examples/turtlesim/turtlesim_agent/build.gradle
+++ b/examples/turtlesim/turtlesim_agent/build.gradle
@@ -13,16 +13,13 @@ apply plugin: 'eclipse'
 version '1.0'
 group   'org.jason'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
 repositories {
     mavenCentral()
     jcenter()
 
     maven { url "https://raw.github.com/rosjava/rosjava_mvn_repo/master" }
     maven { url "https://raw.github.com/jason-lang/mvn-repo/master" }
-    maven { url "http://jacamo.sourceforge.net/maven2" }
+    maven { url "https://raw.github.com/jacamo-lang/mvn-repo/master" }
 
     flatDir {
        dirs 'lib'
@@ -30,9 +27,9 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.jason-lang',     name: 'jason' ,   version: '2.4-SNAPSHOT'
-    compile group: 'org.jason-lang',     name: 'jasonros' ,   version: '1.4'
-    compile group: 'org.jason-lang',     name: 'jasonros_msgs' ,   version: '1.4'
+  implementation group: 'org.jason',     name: 'jason' ,   version: '3.0-SNAPSHOT'
+  implementation group: 'org.jason-lang',     name: 'jasonros' ,   version: '1.9.2'
+  implementation group: 'org.jason-lang',     name: 'jasonros_msgs' ,   version: '1.9.2'
 }
 
 sourceSets {
