🔧 update build.gradle

--- a/jason_ros/src/rosjava_agents/build.gradle
+++ b/jason_ros/src/rosjava_agents/build.gradle
@@ -21,7 +21,7 @@ repositories {
 }
 
 dependencies {
-    implementation group: 'org.jason',     name: 'jason' ,   version: '3.0-SNAPSHOT'
+    implementation group: 'org.jason',     name: 'jason' ,   version: '3.0'
     implementation 'org.ros.rosjava_core:rosjava:[0.3,0.4)'
     implementation 'org.ros.rosjava_messages:std_msgs:[0.5,0.6)'
     implementation 'org.ros.rosjava_bootstrap:message_generation:[0.3,0.4)'
@@ -45,7 +45,7 @@ sourceSets {
 
 task run (type: JavaExec, dependsOn: 'classes') {
     description 'runs the application'
-    main = 'jason.infra.centralised.RunCentralisedMAS'
+    mainClass = 'jason.infra.centralised.RunCentralisedMAS'
     args 'rosjava_agents.mas2j'
     classpath sourceSets.main.runtimeClasspath
 }
@@ -56,14 +56,13 @@ clean {
 }
 
 task javadocJar (type: Jar, dependsOn: javadoc) {
-    baseName 'jasonros'
-    classifier = 'javadoc'
-    //from '${docsDir}/../../doc/api'
+    archiveBaseName = 'jasonros'
+    archiveClassifier = 'javadoc'
 }
 
 task sourceJar (type : Jar) {
-    baseName 'jasonros'
-    classifier = 'sources'
+    archiveBaseName = 'jasonros'
+    archiveClassifier = 'sources'
     from sourceSets.main.allSource
 }
 
