--- a/examples/turtlesim/Dockerfile
+++ b/examples/turtlesim/Dockerfile
@@ -1,7 +1,7 @@
-FROM jason-ros
+FROM rezenders/jason-ros
 
 RUN apt-get update && apt-get install -y \
-    ros-melodic-turtlesim \
+    ros-noetic-turtlesim \
     && rm -rf /var/lib/apt/lists/
 
 COPY * /turtlesim/
